tweaks to blog post, add meme image for a later post

--- a/_posts/2025-05-29-the_idea.md
+++ b/_posts/2025-05-29-the_idea.md
@@ -10,7 +10,7 @@ images:
 
 I have a running conversation with my dog, Max.  On our morning walks, I'll tell him about my plans for the day, my concerns, things I need to remember to do, etc.  As it turns out, Max's memory recall is even worse than mine, so I started recording voice memos with the Voice Recorder app on my iPhone.  When I'd get home, I'd copy the transcription and paste it into ChatGPT: "Please clean up this audio transcription, and create a list of key topics and to-dos."  It _technically_ worked, but it was clumsy and required too many steps.  I soon ended up with a backlog of dozens of unprocessed voice memos on my phone and gave up.
 
-That experience gave me an idea to write an app which would automate the process - an AI audio diary.  I started playing around with the idea I could use a more robust audio transcription service, and I could hook in to my phone's APIs to create reminders, calendar events, etc.  The more I dug in, more questions started popping up and I started having second thoughts.  The space seems quite crowded, and sending your most personal thoughts to some SaaS provider who in turn ships them off to OpenAI... I don't know.  Seems a bit sketchy.  I'm certain that there's a way to do it properly, but it seemed to me that I'd end up spending a lot of time trying to convince users that I wasn't collecting a bunch of potential blackmail material.  I still might end up doing it for myself.  Who knows?
+That experience gave me an idea to write an app which would automate the process - an AI audio diary.  I started playing around with an idea: I could use a more robust audio transcription service, and I could hook in to my phone's APIs to create reminders, calendar events, etc.  The more I dug in, more questions started popping up and I started having second thoughts.  The space seems quite crowded, and sending your most personal thoughts to some SaaS provider who in turn ships them off to OpenAI... I don't know.  Seems a bit sketchy.  I'm certain that there's a way to do it properly, but it seemed to me that I'd end up spending a lot of time trying to convince users that I wasn't collecting a bunch of potential blackmail material.  I still might end up doing it for myself.  Who knows?
 
 These days, I'm mostly a backend developer.  Occasionally I'll sub in on the front end, but I've never worked on a mobile app before.  Not written a single line of code in Swift.  For the voice recorder, I was interested in exploring the performance benefits of native mobile development, so I spent some time looking into the various iOS and Android APIs.  I was especially intrigued by the amount of data available through Apple's HealthKit.  In comparison to Google's Health Connect, it's a treasure trove of information which can be used to offer insights to users (with their permission, of course!).
 
