--- a/_posts/2025-05-29-the_idea.md
+++ b/_posts/2025-05-29-the_idea.md
@@ -1,7 +1,7 @@
 ---
 title:  "The Idea"
 date:   2025-05-29 10:22:46 -0500
-excerpt: "An outline of the MVP of FLogger, a voice-powered life improvement tool.  FLogger aggregates all of the functionality found in other health and wellness apps: diet, hydration, nutrition, mental health, etc and uses that information to provide insights into your life.  This is my first serious effort at building and shipping a side project."
+excerpt: "An outline of the MVP of Flogger, a voice-powered life improvement tool.  Flogger aggregates all of the functionality found in other health and wellness apps: diet, hydration, nutrition, mental health, etc and uses that information to provide insights into your life.  This is my first serious effort at building and shipping a side project."
 images:
   hero: "/uploads/blog/2025-05-29/idea.png"
 ---
